# screenarr

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .secret-scan-allow  AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coderabbit-runner-pins.yml
bridge/: AGENTS.md  __init__.py  arr_models.py  config.py  dashboard.py  main.py  mediamanager.py  security.py  store.py  validation.py
docs/: AGENTS.md  development-process.md  e2e-local-test.md  installation.md  roadmap.md  security.md  troubleshooting.md
scripts/: allowed-secret-placeholders.env  coderabbit.Dockerfile  review-gate.ps1
tests/: AGENTS.md  test_arr_api.py  test_queue_and_validation.py  test_review_gate_script.py
tests/fixtures/: coderabbit-clean.ndjson  coderabbit-docker-clean.ndjson  coderabbit-error.ndjson  coderabbit-major.ndjson  coderabbit-mixed-malformed.ndjson  coderabbit-review-skipped.ndjson  coderabbit-unknown-severity.ndjson
